apps/ntfy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`ntfy.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
      services:
        - name: ntfy
          port: 80
          namespace: ntfy
